deployment/service/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
  ## code yang menuju keberhasilan
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  ##harus di isi nama domain
    - host: localhost.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
  ## code yang menuju keberhasilan
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  ##harus di isi nama domain
    - host: web.localhost.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs2-service
                port:
                  number: 3000
